--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .bckgrd {
   padding-top: 10px;
   display: block;
@@ -163,17 +167,6 @@
   border-radius: 6px;
 }
 
-.aboutme::before {
-  content: "";
-  position: absolute;
-  width: 159px;
-  height: 2px;
-  background: #111;
-  transform: translateY(38px);
-  z-index: 0;
-  transition: all 0.5s ease;
-}
-
 .about-content {
   display: flex;
   align-items: center;
@@ -217,16 +210,6 @@
   padding-bottom: 60px;
   font-family: "Ubuntu", sans-serif;
   text-align: center;
-  transition: all 0.5s ease;
-}
-.services .title::before {
-  content: "";
-  position: absolute;
-  width: 190px;
-  height: 2px;
-  background: #fff;
-  transform: translateY(38px);
-  z-index: 0;
   transition: all 0.5s ease;
 }
 
@@ -320,15 +303,32 @@
   text-align: center;
   transition: all 0.5s ease;
 }
-.skills .max-width h2::before {
-  content: "";
-  position: absolute;
-  width: 140px;
-  height: 2px;
-  background: #111;
-  transform: translateY(38px);
-  z-index: 0;
-  transition: all 0.5s ease;
+.skills .max-width .project-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+.skills .max-width .project-wrapper .single-project {
+  margin-top: 60px;
+  width: 280px;
+  height: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  overflow: hidden;
+}
+.skills .max-width .project-wrapper .project-img {
+  width: 100%;
+  transition: all 1s ease;
+  cursor: pointer;
+}
+.skills .max-width .project-wrapper .single-project:hover .project-img {
+  width: 105%;
+  cursor: pointer;
+  opacity: 0.9;
 }
 .skills .skill-content {
   display: flex;
@@ -336,7 +336,7 @@
 }
 .skills .skill-content .left-column {
   margin-left: 30px;
-  width: calc(50% - 30px);
+  width: calc(50% - 40px);
 }
 .skills .skill-content .left-column a {
   display: inline-block;
@@ -367,6 +367,10 @@
 }
 .skills .skill-content .right-column {
   width: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 .skills .skill-content .right-column .bar {
   margin-bottom: 15px;
@@ -389,43 +393,6 @@
   position: relative;
 }
 
-.skills .max-width .right-column .bar .line::before {
-  position: absolute;
-  content: "";
-  background-color: crimson;
-  height: 5px;
-  width: 100%;
-  border-radius: 8px;
-}
-
-.skills .max-width .right-column .bar .html::before {
-  width: 89%;
-}
-
-.skills .max-width .right-column .bar .css::before {
-  width: 85%;
-}
-
-.skills .max-width .right-column .bar .js::before {
-  width: 70%;
-}
-
-.skills .max-width .right-column .bar .mongo::before {
-  width: 85%;
-}
-
-.skills .max-width .right-column .bar .node::before {
-  width: 75%;
-}
-
-.skills .max-width .right-column .bar .angular::before {
-  width: 76%;
-}
-
-.skills .max-width .right-column .bar .react::before {
-  width: 80%;
-}
-
 .testimonilas {
   padding-top: 30px;
   padding-bottom: 10px;
@@ -443,16 +410,6 @@
   padding-bottom: 60px;
   font-family: "Ubuntu", sans-serif;
   text-align: center;
-  transition: all 0.5s ease;
-}
-.testimonilas .title::before {
-  content: "";
-  position: absolute;
-  width: 190px;
-  height: 2px;
-  background: #fff;
-  transform: translateY(38px);
-  z-index: 0;
   transition: all 0.5s ease;
 }
 .testimonilas .max-width .person-openion {
@@ -507,16 +464,6 @@
   font-family: "Ubuntu", sans-serif;
   text-align: center;
   margin-top: 30px;
-  transition: all 0.5s ease;
-}
-.contact-us .title::before {
-  content: "";
-  position: absolute;
-  width: 190px;
-  height: 2px;
-  background: #111;
-  transform: translateY(38px);
-  z-index: 0;
   transition: all 0.5s ease;
 }
 .contact-us h2 {
@@ -594,13 +541,11 @@ footer {
     margin-left: 15%;
     padding: 0px;
   }
-
   .navDiv {
-    margin-left: 150px;
+    margin-left: 30%;
     display: block;
     z-index: 999;
   }
-
   .navContainer {
     display: flex;
     flex-direction: column;
@@ -616,7 +561,6 @@ footer {
     font-size: 30px;
     transition: all 0.2s ease-in;
   }
-
   .navContainer a {
     justify-content: center;
     margin-bottom: 30px;
@@ -625,11 +569,9 @@ footer {
     font-size: 30px;
     transition: all 0.3s ease;
   }
-
   .navContainer.show {
     left: 0%;
   }
-
   .navContainer.show {
     justify-content: center;
     height: 100%;
@@ -637,7 +579,6 @@ footer {
     flex-direction: column;
     transition: all 0.2s ease-in;
   }
-
   .navContainer.show a {
     justify-content: center;
     margin-bottom: 30px;
@@ -646,7 +587,6 @@ footer {
     font-size: 30px;
     transition: all 0.2s ease-in;
   }
-
   .home .max-width {
     margin-top: 200px;
     margin-left: 15%;
@@ -664,12 +604,10 @@ footer {
   .home .max-width .content span {
     color: crimson;
   }
-
   .home a {
     font-size: 15px;
     padding: 7px 18px;
   }
-
   .about .aboutme {
     position: relative;
     font-size: 20px;
@@ -677,17 +615,6 @@ footer {
     font-family: "Ubuntu", sans-serif;
     text-align: center;
   }
-
-  .aboutme::before {
-    content: "";
-    position: absolute;
-    width: 90px;
-    height: 2px;
-    background: #111;
-    transform: translateY(30px);
-    z-index: 0;
-  }
-
   .about-content {
     display: flex;
     align-items: center;
@@ -700,7 +627,7 @@ footer {
     width: 100%;
     font-size: 20px;
     margin-bottom: 10px;
-    margin-right: 5%;
+    margin-right: 30px;
   }
   .about-content .columnright span {
     color: crimson;
@@ -722,7 +649,6 @@ footer {
     color: crimson;
     background: none;
   }
-
   .about .about-content {
     display: flex;
     justify-content: center;
@@ -733,7 +659,6 @@ footer {
     width: 80%;
     border-radius: 6px;
   }
-
   .services .title {
     color: #fff;
     position: relative;
@@ -742,16 +667,6 @@ footer {
     font-family: "Ubuntu", sans-serif;
     text-align: center;
   }
-  .services .title::before {
-    content: "";
-    position: absolute;
-    width: 110px;
-    height: 2px;
-    background: #fff;
-    transform: translateY(30px);
-    z-index: 0;
-  }
-
   .skills .max-width h2 {
     margin-top: 80px;
     color: #111;
@@ -760,15 +675,6 @@ footer {
     padding-bottom: 30px;
     font-family: "Ubuntu", sans-serif;
     text-align: center;
-  }
-  .skills .max-width h2::before {
-    content: "";
-    position: absolute;
-    width: 80px;
-    height: 2px;
-    background: #111;
-    transform: translateY(30px);
-    z-index: 0;
   }
   .skills .skill-content {
     flex-wrap: wrap;
@@ -783,14 +689,11 @@ footer {
   }
   .skills .skill-content .right-column {
     margin-left: 30px;
+    margin-right: 30px;
     width: 100%;
   }
-
   .testimonilas .title {
     font-size: 20px;
-  }
-  .testimonilas .title::before {
-    width: 115px;
   }
   .testimonilas .max-width .person-openion {
     display: flex;
@@ -812,14 +715,9 @@ footer {
     margin-bottom: 40px;
     width: 100%;
   }
-
   .contact-us .title {
     font-size: 20px;
   }
-  .contact-us .title::before {
-    width: 115px;
-  }
-
   .contact-us .max-width {
     display: flex;
     flex-wrap: wrap;
@@ -850,9 +748,8 @@ footer {
     justify-content: center;
   }
   .about-content .columnright {
-    margin: 30px 20px 0px;
+    margin: 30px 30px 0px;
   }
-
   .services {
     padding-top: 30px;
     background-color: #111;
