--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,9 @@
   box-sizing: border-box;
   text-decoration: none;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 //navbar styling :
 
@@ -174,16 +177,16 @@
   }
 }
 
-.aboutme::before {
-  content: "";
-  position: absolute;
-  width: 159px;
-  height: 2px;
-  background: #111;
-  transform: translateY(38px);
-  z-index: 0;
-  transition: all 0.5s ease;
-}
+// .aboutme::before {
+//   content: "";
+//   position: absolute;
+//   width: 159px;
+//   height: 2px;
+//   background: #111;
+//   transform: translateY(38px);
+//   z-index: 0;
+//   transition: all 0.5s ease;
+// }
 
 .about-content {
   display: flex;
@@ -234,16 +237,16 @@
     text-align: center;
     transition: all 0.5s ease;
   }
-  .title::before {
-    content: "";
-    position: absolute;
-    width: 190px;
-    height: 2px;
-    background: #fff;
-    transform: translateY(38px);
-    z-index: 0;
-    transition: all 0.5s ease;
-  }
+  // .title::before {
+  //   content: "";
+  //   position: absolute;
+  //   width: 190px;
+  //   height: 2px;
+  //   background: #fff;
+  //   transform: translateY(38px);
+  //   z-index: 0;
+  //   transition: all 0.5s ease;
+  // }
 }
 
 .services {
@@ -344,22 +347,57 @@
     text-align: center;
     transition: all 0.5s ease;
   }
-  .max-width h2::before {
-    content: "";
-    position: absolute;
-    width: 140px;
-    height: 2px;
-    background: #111;
-    transform: translateY(38px);
-    z-index: 0;
-    transition: all 0.5s ease;
+  .max-width {
+    .project-wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      margin-left: 100px;
+      margin-right: 100px;
+      .single-project {
+        margin-top: 60px;
+        width: 280px;
+        height: 300px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        overflow: hidden;
+
+        // background-color: blue;
+      }
+
+      .project-img {
+        width: 100%;
+        transition: all 1s ease;
+        cursor: pointer;
+        // height: 320px;
+
+        // background-color: blue;
+      }
+      .single-project:hover .project-img {
+        width: 105%;
+        cursor: pointer;
+        opacity: 0.9;
+      }
+    }
   }
+  // .max-width h2::before {
+  //   content: "";
+  //   position: absolute;
+  //   width: 140px;
+  //   height: 2px;
+  //   background: #111;
+  //   transform: translateY(38px);
+  //   z-index: 0;
+  //   transition: all 0.5s ease;
+  // }
   .skill-content {
     display: flex;
     flex-direction: row;
     .left-column {
       margin-left: 30px;
-      width: calc(50% - 30px);
+      width: calc(50% - 40px);
       a {
         display: inline-block;
         background-color: crimson;
@@ -390,6 +428,10 @@
     }
     .right-column {
       width: 50%;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-between;
       .bar {
         margin-bottom: 15px;
         .info {
@@ -416,35 +458,35 @@
   position: relative;
 }
 
-.skills .max-width .right-column .bar .line::before {
-  position: absolute;
-  content: "";
-  background-color: crimson;
-  height: 5px;
-  width: 100%;
-  border-radius: 8px;
-}
-.skills .max-width .right-column .bar .html::before {
-  width: 89%;
-}
-.skills .max-width .right-column .bar .css::before {
-  width: 85%;
-}
-.skills .max-width .right-column .bar .js::before {
-  width: 70%;
-}
-.skills .max-width .right-column .bar .mongo::before {
-  width: 85%;
-}
-.skills .max-width .right-column .bar .node::before {
-  width: 75%;
-}
-.skills .max-width .right-column .bar .angular::before {
-  width: 76%;
-}
-.skills .max-width .right-column .bar .react::before {
-  width: 80%;
-}
+// .skills .max-width .right-column .bar .line::before {
+//   position: absolute;
+//   content: "";
+//   background-color: crimson;
+//   height: 5px;
+//   width: 100%;
+//   border-radius: 8px;
+// }
+// .skills .max-width .right-column .bar .html::before {
+//   width: 89%;
+// }
+// .skills .max-width .right-column .bar .css::before {
+//   width: 85%;
+// }
+// .skills .max-width .right-column .bar .js::before {
+//   width: 70%;
+// }
+// .skills .max-width .right-column .bar .mongo::before {
+//   width: 85%;
+// }
+// .skills .max-width .right-column .bar .node::before {
+//   width: 75%;
+// }
+// .skills .max-width .right-column .bar .angular::before {
+//   width: 76%;
+// }
+// .skills .max-width .right-column .bar .react::before {
+//   width: 80%;
+// }
 //=====================================================================
 //styling testmonials:
 
@@ -466,16 +508,16 @@
     text-align: center;
     transition: all 0.5s ease;
   }
-  .title::before {
-    content: "";
-    position: absolute;
-    width: 190px;
-    height: 2px;
-    background: #fff;
-    transform: translateY(38px);
-    z-index: 0;
-    transition: all 0.5s ease;
-  }
+  // .title::before {
+  //   content: "";
+  //   position: absolute;
+  //   width: 190px;
+  //   height: 2px;
+  //   background: #fff;
+  //   transform: translateY(38px);
+  //   z-index: 0;
+  //   transition: all 0.5s ease;
+  // }
 
   .max-width {
     .person-openion {
@@ -537,16 +579,16 @@
     margin-top: 30px;
     transition: all 0.5s ease;
   }
-  .title::before {
-    content: "";
-    position: absolute;
-    width: 190px;
-    height: 2px;
-    background: #111;
-    transform: translateY(38px);
-    z-index: 0;
-    transition: all 0.5s ease;
-  }
+  // .title::before {
+  //   content: "";
+  //   position: absolute;
+  //   width: 190px;
+  //   height: 2px;
+  //   background: #111;
+  //   transform: translateY(38px);
+  //   z-index: 0;
+  //   transition: all 0.5s ease;
+  // }
   h2 {
     font-family: "Poppins", sans-serif;
     margin: 0px 0px 20px 30px;
@@ -628,7 +670,7 @@ footer {
   }
 
   .navDiv {
-    margin-left: 150px;
+    margin-left: 30%;
     display: block;
     z-index: 999;
   }
@@ -716,15 +758,15 @@ footer {
   // ======================================================================================
   //About styling: width 750
 
-  .aboutme::before {
-    content: "";
-    position: absolute;
-    width: 90px;
-    height: 2px;
-    background: #111;
-    transform: translateY(30px);
-    z-index: 0;
-  }
+  // .aboutme::before {
+  //   content: "";
+  //   position: absolute;
+  //   width: 90px;
+  //   height: 2px;
+  //   background: #111;
+  //   transform: translateY(30px);
+  //   z-index: 0;
+  // }
 
   .about-content {
     display: flex;
@@ -736,7 +778,7 @@ footer {
         width: 100%;
         font-size: 20px;
         margin-bottom: 10px;
-        margin-right: 5%;
+        margin-right: 30px;
       }
     }
     .columnright span {
@@ -784,15 +826,15 @@ footer {
       font-family: "Ubuntu", sans-serif;
       text-align: center;
     }
-    .title::before {
-      content: "";
-      position: absolute;
-      width: 110px;
-      height: 2px;
-      background: #fff;
-      transform: translateY(30px);
-      z-index: 0;
-    }
+    // .title::before {
+    //   content: "";
+    //   position: absolute;
+    //   width: 110px;
+    //   height: 2px;
+    //   background: #fff;
+    //   transform: translateY(30px);
+    //   z-index: 0;
+    // }
   }
   // ======================================================================================
   //skills styling width 750
@@ -807,15 +849,15 @@ footer {
       font-family: "Ubuntu", sans-serif;
       text-align: center;
     }
-    .max-width h2::before {
-      content: "";
-      position: absolute;
-      width: 80px;
-      height: 2px;
-      background: #111;
-      transform: translateY(30px);
-      z-index: 0;
-    }
+    // .max-width h2::before {
+    //   content: "";
+    //   position: absolute;
+    //   width: 80px;
+    //   height: 2px;
+    //   background: #111;
+    //   transform: translateY(30px);
+    //   z-index: 0;
+    // }
     .skill-content {
       flex-wrap: wrap;
       .left-column {
@@ -828,6 +870,7 @@ footer {
       }
       .right-column {
         margin-left: 30px;
+        margin-right: 30px;
         width: 100%;
       }
     }
@@ -840,9 +883,9 @@ footer {
     .title {
       font-size: 20px;
     }
-    .title::before {
-      width: 115px;
-    }
+    // .title::before {
+    //   width: 115px;
+    // }
 
     .max-width {
       .person-openion {
@@ -875,9 +918,9 @@ footer {
     .title {
       font-size: 20px;
     }
-    .title::before {
-      width: 115px;
-    }
+    // .title::before {
+    //   width: 115px;
+    // }
   }
 
   .contact-us {
@@ -916,7 +959,7 @@ footer {
     }
 
     .columnright {
-      margin: 30px 20px 0px;
+      margin: 30px 30px 0px;
     }
   }
 
