--- a/style.css
+++ b/style.css
@@ -12,6 +12,18 @@ html {
   scroll-behavior: smooth;
 }
 
+a {
+  color: rgba(128, 128, 128, 0.837);
+} /* Unvisited link  */
+a:visited {
+  color: rgba(128, 128, 128, 0.837);
+} /* Visited link    */
+a:hover {
+  color: rgba(128, 128, 128, 0.837);
+} /* Mouse over link */
+a:active {
+  color: rgba(128, 128, 128, 0.837);
+} /* Selected link   */
 .bckgrd {
   padding-top: 10px;
   display: block;
@@ -257,7 +269,6 @@ html {
 }
 .services .serv-content .card1:hover {
   transform: translateY(8px);
-  cursor: pointer;
 }
 .services .serv-content .card2 {
   padding-top: 10px;
@@ -289,7 +300,6 @@ html {
 }
 .services .serv-content .card2:hover {
   transform: translateY(8px);
-  cursor: pointer;
 }
 
 .skills .max-width h2 {
@@ -308,27 +318,49 @@ html {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-top: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
+  justify-content: center;
 }
 .skills .max-width .project-wrapper .single-project {
-  margin-top: 60px;
+  border: 2px solid rgba(128, 128, 128, 0.36);
+  border-radius: 10px;
+  position: relative;
+  margin-top: 40px;
+  margin-right: 30px;
+  margin-left: 30px;
   width: 280px;
-  height: 300px;
+  height: 280px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   overflow: hidden;
 }
+.skills .max-width .project-wrapper .single-project .navigate-wrapper {
+  position: absolute;
+  display: flex;
+  visibility: hidden;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  opacity: 0.5;
+  transition: all 0.5s ease;
+}
 .skills .max-width .project-wrapper .project-img {
   width: 100%;
+  height: 100%;
   transition: all 1s ease;
-  cursor: pointer;
 }
 .skills .max-width .project-wrapper .single-project:hover .project-img {
   width: 105%;
-  cursor: pointer;
-  opacity: 0.9;
+  height: 105%;
+  opacity: 0.3;
+}
+.skills .max-width .project-wrapper .single-project:hover .navigate-wrapper {
+  visibility: visible;
 }
 .skills .skill-content {
   display: flex;
