--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,18 @@
 html {
   scroll-behavior: smooth;
 }
-
+a {
+  color: rgba(128, 128, 128, 0.837);
+} /* Unvisited link  */
+a:visited {
+  color: rgba(128, 128, 128, 0.837);
+} /* Visited link    */
+a:hover {
+  color: rgba(128, 128, 128, 0.837);
+} /* Mouse over link */
+a:active {
+  color: rgba(128, 128, 128, 0.837);
+} /* Selected link   */
 //navbar styling :
 
 .bckgrd {
@@ -294,7 +305,7 @@ html {
 
     .card1:hover {
       transform: translateY(8px);
-      cursor: pointer;
+      // cursor: pointer;
     }
 
     .card2 {
@@ -327,7 +338,7 @@ html {
     }
     .card2:hover {
       transform: translateY(8px);
-      cursor: pointer;
+      // cursor: pointer;
     }
   }
 }
@@ -353,32 +364,59 @@ html {
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
-      margin-left: 100px;
-      margin-right: 100px;
+      margin-top: 50px;
+      margin-left: 30px;
+      margin-right: 30px;
+      justify-content: center;
+
       .single-project {
-        margin-top: 60px;
+        border: 2px solid rgba(128, 128, 128, 0.36);
+        border-radius: 10px;
+        position: relative;
+        // background-color: red;
+        margin-top: 40px;
+        margin-right: 30px;
+        margin-left: 30px;
         width: 280px;
-        height: 300px;
+        height: 280px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+
         overflow: hidden;
+        .navigate-wrapper {
+          position: absolute;
+          display: flex;
+          visibility: hidden;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          width: 100%;
+          z-index: 2;
+          opacity: 0.5;
+          transition: all 0.5s ease;
+        }
 
         // background-color: blue;
       }
 
       .project-img {
         width: 100%;
+        height: 100%;
         transition: all 1s ease;
-        cursor: pointer;
         // height: 320px;
 
         // background-color: blue;
       }
       .single-project:hover .project-img {
         width: 105%;
-        cursor: pointer;
-        opacity: 0.9;
+        height: 105%;
+        // cursor: pointer;
+        opacity: 0.3;
+      }
+      .single-project:hover .navigate-wrapper {
+        visibility: visible;
+        // cursor: pointer;
       }
     }
   }
